<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/back_6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/input_login"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textColor="#dcfbce" />

    <EditText
        android:layout_width="252dp"
        android:layout_height="40dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextLoginTeacher"
        android:hint="@string/login"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit"
        android:paddingLeft="10dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/input_password"
        android:id="@+id/textViewInputPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textColor="#dcfbce"/>

    <EditText
        android:layout_width="252dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPasswordTeacher"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit"
        android:paddingLeft="10dp" />

    <Button
        android:layout_width="158dp"
        android:layout_height="56dp"
        android:text="@string/enter"
        android:id="@+id/buttonEnter"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_2"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp">

        <Button
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/save"
            android:id="@+id/buttonSave"
            android:background="@drawable/button" />

        <Button
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/load"
            android:id="@+id/buttonLoad"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

</LinearLayout>