<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/back_6"
    android:weightSum="1">

    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/input_login"
        android:id="@+id/textViewFullName"
        android:layout_gravity="center_horizontal"
        android:textColor="#dcfbce"
        android:textStyle="bold" />

    <EditText
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextLoginStudent"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit"
        android:hint="@string/login"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/input_password"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#dcfbce"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassStudent"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_a_test"
        android:id="@+id/textViewChooseTest"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#dcfbce"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerTest"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:background="@drawable/drop_down"
        android:spinnerMode="dropdown"
        android:layout_marginTop="5dp"
        android:layout_weight="0.06" />

    <Button
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:text="@string/take_the_test"
        android:id="@+id/buttonTakeTheTest"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/save"
            android:id="@+id/buttonSaveSt"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button" />

        <Button
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/load"
            android:id="@+id/buttonLoadSt"
            android:background="@drawable/button"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

</LinearLayout>