<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#0a0b0a">

    <EditText
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:id="@+id/editTextLoginInEdit"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit"
        android:hint="@string/login"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:textColor="#014a03" />

    <EditText
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:ems="10"
        android:id="@+id/editTextNameInEdit"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit"
        android:layout_marginTop="10dp"
        android:hint="@string/full_name"
        android:paddingLeft="10dp"
        android:textColor="#014a03" />

    <EditText
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:id="@+id/editTextPasswordInEdit"
        android:paddingLeft="10dp"
        android:textColor="#014a03" />

    <Button
        android:layout_width="109dp"
        android:layout_height="69dp"
        android:text="@string/edit"
        android:id="@+id/buttonEditInEditUser"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_circle" />
</LinearLayout>
