<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/toast_layout"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="10dp"
android:background="#202b20"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#070707">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="285dp"
            android:layout_height="60dp"
            android:weightSum="1"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/editTextTrueAnswerInD"
                android:hint="@string/true_answer"
                android:background="@drawable/edit"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:layout_weight="0.98"
                android:gravity="center_vertical|center_horizontal" />

            <Button
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:text="@string/add"
                android:id="@+id/buttonAddTrue"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_add"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="3dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_gravity="center_horizontal" >

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/editTextFalseAnswerInD"
                android:hint="@string/false_answer"
                android:background="@drawable/edit"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:layout_weight="0.98"
                android:gravity="center_vertical|center_horizontal" />

            <Button
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:text="@string/add"
                android:id="@+id/buttonAddFalse"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_add"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="3dp" />
        </LinearLayout>

        <Button
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:id="@+id/buttonCancelAddAnsw"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:background="@drawable/cancel"
            android:layout_marginBottom="7dp" />
    </LinearLayout>

</LinearLayout>